@@ -281,6 +281,8 @@ following image formats are supported:
     @tab Portable GrayMap image
 @item PGMYUV       @tab X @tab X
     @tab PGM with U and V components in YUV 4:2:0
+@item PIC          @tab @tab X
+    @tab Pictor/PC Paint
 @item PNG          @tab X @tab X
     @tab 2/4 bpp not supported yet
 @item PPM          @tab X @tab X
